# DronecodeSDK

./: .gitignore
example/offboard_velocity/: offboard_velocity.cpp
example/takeoff_land/: takeoff_and_land.cpp
plugins/: CMakeLists.txt
plugins/comm/: CMakeLists.txt  comm.cpp  comm_impl.cpp  comm_impl.h
plugins/comm/include/plugins/comm/: comm.h
plugins/telemetry/: telemetry_impl.cpp
plugins/telemetry/include/plugins/telemetry/: telemetry.h
